--- a/XML/DOM.html
+++ b/XML/DOM.html
@@ -6,6 +6,9 @@
     </head>
     <body class="container">
         <br><br><br>
+        <div id="master">
+
+        
         <p id="para1">
             <i>
                 "The W3C Document Object Model (DOM) is a platform and language-neutral interface that 
@@ -39,6 +42,9 @@
             <li><a href="https:\\www.yahoo.com">Yahoo</a></li>
             <li><a href="https:\\www.bing.com">bing</a></li>
         </ul>
+
+        <input id="btnDelete" type="button" value="Delete" onclick="deleteNode(node)">
+    </div>
         <script>
             var element = document.getElementById("para1");
 
@@ -73,20 +79,87 @@
             // alert("Language: " + myDivTag.lang);
             // alert("direction: " + myDivTag.dir);
             // alert("title: " + myDivTag.title);
-            alert("Classes: " + myDivTag.classList);
+            // alert("Classes: " + myDivTag.classList);
             myDivTag.className = "Class1 btn btn-primary"; //changing the first class
-            alert("First Class: " + myDivTag.classList[0]);
-            alert("Length of Classes: " + myDivTag.classList.length);
-            alert("click is: " + myDivTag.getAttribute("data-click"));
+            // alert("First Class: " + myDivTag.classList[0]);
+            // alert("Length of Classes: " + myDivTag.classList.length);
+            // alert("click is: " + myDivTag.getAttribute("data-click"));
             myDivTag.setAttribute("data-click", "dbClick"); //the second argument is the name of attribute
-            alert("click is: " + myDivTag.getAttribute("data-click")); //print the name of the changed attribute
+            // alert("click is: " + myDivTag.getAttribute("data-click")); //print the name of the changed attribute
 
             var link = document.getElementsByTagName("a")[1]; //get the second link
             //change the href attribute of the link
             link.href = "https://www.google.com"; //must contain http:// or https:// for the right address
-            alert(link.href + " ==> The href has changed from yahoo to google"); //print its href attribute
+            // alert(link.href + " ==> The href has changed from yahoo to google"); //print its href attribute
 
+            //%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% CREATING SOME ELEMENTS DYNAMICALLY
+            var myDiv = document.createElement("div"); //create a div tag and put it in myDiv variable
+            myDiv.textContent = "This is the div tag that is dynamically appended to the body tag."; //put some content in the created div tag
+            document.body.appendChild(myDiv); //append the created div as a child to the body tag
 
+            var myPara = document.createElement("p"); //create a p tag 
+            var text1 = document.createTextNode("This is a paragraph 1");//textNode are the tags that have contents inside
+            var text2 = document.createTextNode("This is a paragraph 2 ....");
+            var text3 = document.createTextNode("This is a paragraph 3");
+            //Now we want to add the textNode to myPara
+            myPara.appendChild(text1);
+            myPara.appendChild(text2);
+            myPara.appendChild(text3);
+            document.body.appendChild(myPara); //append the created paragraph as a child to the body tag
+            //change the content of text1
+            text1.textContent = "This is changed!!!!!!!!!!";
+
+            var par1 = document.createElement("p"); //create another paragraph
+            par1.textContent = myPara.childNodes[2].nodeValue; //put the last text of myPara into it as text
+            document.body.appendChild(par1); //append the new paragraph to the body tag
+            // alert(myPara.childNodes.length); //print the length of myPara (3)
+            // myPara.normalize(); //It merges the texts in the myPara into one
+            // alert(myPara.childNodes.length); //print the length of myPara (1)
+            myPara.childNodes[2].appendData("(Appended!!!)"); //append data to the third child of myPara
+            //delete the 4 characters (4 dots) from the end of second element
+            myPara.childNodes[1].deleteData(text2.length - 4, 4); 
+            myPara.childNodes[1].insertData(0, "===>"); //add this string to the first of second element
+            myPara.childNodes[2].replaceData(text3.length, 5 , "%%%%%");
+
+            var newTextNode = myPara.childNodes[0].splitText(8);
+            newTextNode.nodeValue = "Ha ha ha";
+
+            //Defining some attributes
+            var attr1 = document.createAttribute("ng-click");
+            var attr2 = document.createAttribute("ng-dbclick");
+            var attr3 = document.createAttribute("ng-repeat");
+
+            //Adding values to the attributes
+            attr1.nodeValue = "clickTome()";
+            attr2.nodeValue = "dbclick()";
+            attr3.nodeValue = "something()";
+
+            //Setting attributes to the paragraph myPara
+            myPara.setAttributeNode(attr1);
+            myPara.setAttributeNode(attr2);
+            myPara.setAttributeNode(attr3);
+
+            //Accessing attributes by their name (attribute by the name ng-click)
+            var attrValue = myPara.attributes["ng-click"].value; 
+            // alert(attrValue); //printing the value of the attribute
+
+            function loadScript(url){
+                var script = document.createElement("script");
+                script.type = "text/javascript";
+                script.src = url;
+                document.body.appendChild(script);
+
+            }
+            function loadStyle(url){
+                var link = document.createElement("link");
+                link.rel = "stylesheet";
+                link.href = url;
+                document.head.appendChild(link);
+
+            }
+
+            loadScript("jquery.js"); //If this link is real, then we can use JQuery library 
+            loadStyle("Bootstrap.css"); //using bootstrap framework
         </script>
     
     </body>
