--- a/Projects/advertising/index.html
+++ b/Projects/advertising/index.html
@@ -1060,7 +1060,46 @@
         </div>
     </div>
 
+    <footer class="footer" dir="rtl">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 email-part">
+                    <form action="">
+                        <div class="form-group">
+                            <input type="email" class="form-control" placeholder="لطفا ایمیل خود را وارد کنید">
+                        </div>
+                        <button class="btn btn-danger btn-block">
+                            عضویت در خبرنامه
+                        </button>
+                    </form>
+                </div>
+                <div class="col-md-5 text-center footer-list">
+                    <div class="navbar">
+                        <ul class="list-group list-group-horizontal">
+                            <li class="list-group-item"><a href="#">خانه</a></li>
+                            <li class="list-group-item"><a href="#">امکانات</a></li>
+                            <li class="list-group-item"><a href="#">تبلیغات</a></li>
+                            <li class="list-group-item"><a href="#">درباره ما</a></li>
+                            <li class="list-group-item"><a href="#">تماس با ما</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <p>
 
+                    </p>
+                </div>
+            </div>
+
+            <div class="row text-center">
+                <p class="footerdesc">
+                    <small>
+                        طراحی و اجرا : علی کارآزموده
+                    </small>
+                </p>
+            </div>
+        </div>
+    </footer>
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
