--- a/Projects/advertising/shop.html
+++ b/Projects/advertising/shop.html
@@ -8,7 +8,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-    <title>Home</title>
+    <title>Shop</title>
 
     <link href="style.css" rel="stylesheet">
     <link href="css/owl.carousel.css" rel="stylesheet">
