Update index.html for weekday

--- a/Projects/digital clock/index.html
+++ b/Projects/digital clock/index.html
@@ -29,7 +29,11 @@
     <div id="clock">
 
     </div>
-    <br><br><br><br><br>
+    <div id="day-box" class="card-panel #039be5 light-blue darken-1">
+      <p align="center">Today is <strong id="weekday"></strong></p>
+      <p align="center"><i id="phrase">phrase</i></p>
+    </div>
+    <br><br><br><br>
 
 
     <footer class="page-footer #039be5 light-blue darken-1" id="footer">
